QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


0.4.3  2016-09-14  End of Summer'16 release.

- Fix build error caused by variable length array.

- Fix some tooltip spelling (patch by Jaromír Mikeš, thanks). 

- Translation (not) fix for the default server name "(default)".

- Old "Start minimized to system tray" option returns to setup.

- Dropped the --enable-qt5 from configure as found redundant
  given that's the build default anyway (suggestion by Guido
  Scholz, while for Qtractor, thanks).

- Late again French (fr) translation update (by Olivier Humbert
  aka. trebmuh, thanks).


0.4.2  2016-04-05  Spring'16 release frenzy.

- Added a brand new "Enable JACK D-BUS interface" option, split
  from the old common "Enable D-BUS interface" setup option which
  now refers to its own self D-BUS interface exclusively.

- Dropped old "Start minimized to system tray" option from setup.

- Add double-click action (toggle start/stop) to systray (a pull
  request by Joel Moberg, thanks).

- Added application keywords to freedesktop.org's AppData.

- System-tray icon context menu has been fixed/hacked to show up
  again on Plasma 5 (aka. KDE5) notification status area.

- Switched column entries in the unified interface device combo-
  box to make it work for macosx/coreaudio again.

- Blind fix to a FTBFS on macosx/coreaudio platforms, a leftover
  from the unified interface device selection combo-box inception,
  almost two years ago.

- Prevent x11extras module from use on non-X11/Unix plaforms.

- Late French (fr) translation update (by Olivier Humbert, thanks).


0.4.1  2015-10-28  A Fall'15 release.

- Probing portaudio audio device in a separate thread (by Kjetil
  Matheussen, thanks).

- Messages standard output capture has been improved again, now
  in both ways a non-blocking pipe may get.

- Regression fix for invalid system-tray icon dimensions reported